attempt to start sibling containers